<resources>
    <string name="app_name">Ex6</string>
    <string name="application_type">Application type:</string>
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="start_server">Start server</string>
    <string name="connect_server">Connect to server</string>
    <string name="number_1">Number 1:</string>
    <string name="number_2">Number 2:</string>
    <string name="calculate">Calculate sum</string>
</resources>
